--- a/src/main/webapp/views/productions.html
+++ b/src/main/webapp/views/productions.html
@@ -83,3 +83,10 @@
         </table>
     </div>
 </div>
+
+
+
+       <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#saveProductionModal" ng-click="clear()">
+        <span class="glyphicon glyphicon-sort-by-attributes"></span> Sort In Ascending Order
+    </button>
+    
